tests/errors/record-missing-comma/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0026]: Unexpected token (a ':'). Expected a '}'.
  ╭─▸ tests/errors/record-missing-comma/main.pa:2:20
  │
2 │ def main = { a: 1 b: 2 }
  │                    ^
  │
  ╰─ help: record fields are separated with commas (e.g. `{ a: 1, b: 2 }`).
